[package]
name = "ckb-carrot"
version = "0.1.0"
authors = ["lujw@720s <lu.jw@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.1.6"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
