[package]
name = "play-args"
version = "0.1.0"
authors = ["lujw <lu.jw@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ckb-std = "0.2.1"
# Use a crate of godwoken for data (de)serialization in Molecule encoding.
godwoken-types = { path = "../../godwoken/types", default-features = false }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
